--- a/style.css
+++ b/style.css
@@ -91,6 +91,10 @@ body {
     text-transform: uppercase;
 }
 
+.conteudo {
+    font-size: 20px;
+     text-align: center;
+}
 
 @media screen and (min-width:768px){
     .botoes{
